feat: implements post resource
